--- a/wa.user.styl
+++ b/wa.user.styl
@@ -155,7 +155,7 @@ AC = next_ac
 // Color generator.
 /// TODO: Needs more polish.
 if(dark(BG)) {
-    a1 =  10%; a2 =  20%; a3 =  30%; a4 =  70%; a5 =  80%;
+    a1 =  10%; a2 =  20%; a3 =  30%; a4 =  78%; a5 =  88%;
     b1 =  10%; b2 = -05%; b3 = -10%; b4 = -15%; b5 = -20%;
     f1 = -10%; f2 =  06%; f3 =  12%; f4 =  24%; f5 =  40%;
 } else {
@@ -181,12 +181,12 @@ fg = {
     '-5': _d(FG, f5),
 }
 ac = {
-    '-0':         AC,
-    '-1': mix(BG, AC, a1),
-    '-2': mix(BG, AC, a2),
-    '-3': mix(BG, AC, a3),
-    '-4': mix(BG, AC, a4),
-    '-5': mix(BG, AC, a5),
+    '-0':                 AC,
+    '-1': mix(_d(BG, -4), AC, a1),
+    '-2': mix(_d(BG, -4), AC, a2),
+    '-3': mix(_d(BG, -4), AC, a3),
+    '-4': mix(_d(BG, -4), AC, a4),
+    '-5': mix(_d(BG, -4), AC, a5),
 }
 
 define('bg' + key, val) for key, val in bg
