added profile picture classes for avatars rounded corners

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -780,7 +780,7 @@ define('ac' + key, val) for key, val in ac
     ._1BjNO[style] {
         c: 0 0 bg-5
         /// Avatars/images/new group.
-        &, > img, /._18cLH { rad: var(--r-avatars) i }
+        &, > img, /._18cLH, /._3_Hvt, /._2H1bg { rad: var(--r-avatars) i }
         /// Tweak default-user icons.
         if ( radius-a != '50%' ) {
             /[style *= 'height: 26px'],
