chore: polish typing indicator in compact mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1194,11 +1194,11 @@ define('ac' + key, val) for key, val in ac
                             content: '' i
                             z-index: 1 i
                             position: absolute i
-                            top: -32px i
-                            left: -66px i
+                            top: -31px i
+                            left: -71px i
                             height: 53px i
                             width: 53px i
-                            rad: 50% i
+                            rad: var(--r-avatars) i
                             box-shadow: inset 0 0 0 3px green i
                             animation: 2s pulse infinite i
                         }
