--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      2.9.0
+@version      2.10.0
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -677,8 +677,8 @@ define('ac' + key, val) for key, val in ac
         --bg-rep       : bg_rep
 
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 2.9.0 — June 5th, 2020';
-        --message: 'Towards v3 of DWA! The last update broke too many things, and we are rewriting core functionality — the dark theme — so that in future updates we can reimplement currently broken DWA features – compact mode, tail styles, "private mode", etc.';
+        --version: 'Dark-WhatsApp 2.10.0 — June 6th, 2020';
+        --message: 'Towards v3 of DWA! The last update broke too many things, and we are rewriting core functionality — the dark theme — so that in future updates we can reimplement currently broken DWA features – compact mode, tail styles, "private mode", etc. \A\A Compact mode and custom border radius options are back!';
         --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
 
         /\*{
