--- a/wa.user.styl
+++ b/wa.user.styl
@@ -864,9 +864,11 @@ define('msg-in'  + key, val) for key, val in msg-in
                 }
 
                 /// Large screens.
-                @media (min-width: 1441px) {
-                    border: 1px solid bg-5 i
-                    rad: var(--r-menus) i
+                if (!fullscreen) {
+                    @media (min-width: 1441px) {
+                        border: 1px solid var(--bg-5) i
+                        rad: var(--r-menus) i
+                    }
                 }
 
                 /// Bar/member colors.
@@ -1017,6 +1019,20 @@ define('msg-in'  + key, val) for key, val in msg-in
             &, /._11ARv {
                 width: calc(100% - 38px) i
                 max-width: var(--app-width) i
+            }
+
+            /// Feat -> Fullscreen mode.
+            if (fullscreen) {
+                &, /[data-animate-status-v3-modal-background] > div {
+                    width: 100% i
+                    max-width: 100% i
+                    height: 100% i
+                    top: unset i
+                }
+            } else {
+                rad: var(--r-menus) i
+                border: 1px solid var(--bg-5) i
+                box-shadow: var(--bshadow) i
             }
         }
 
