vars: fix color variables in status area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -551,12 +551,12 @@ define('msg-in'  + key, val) for key, val in msg-in
         --status-background-rgb: var(--bg-1-rgb) //0,0,0;
         --status-background-hover: var(--bg-2) //#242424;
         --status-background-hover-rgb: var(--bg-2-rgb) //36,36,36;
-        --status-primary: #fff;
-        --status-primary-rgb: 255,255,255;
-        --status-secondary: #ffffff8c;
-        --status-secondary-rgb: 255,255,255;
-        --status-secondary-stronger: #b3b3b3;
-        --status-secondary-stronger-rgb: 179,179,179;
+        --status-primary: var(--fg-1) //#fff;
+        --status-primary-rgb: var(--fg-1-rgb) //255,255,255;
+        --status-secondary: var(--fg-4) //#ffffff8c;
+        --status-secondary-rgb: var(--fg-4-rgb) //255,255,255;
+        --status-secondary-stronger: var(--fg-5) //#b3b3b3;
+        --status-secondary-stronger-rgb: var(--fg-5-rgb) //179,179,179;
         --success: var(--ac-0) //#00af9c;
         --success-rgb: var(--ac-0-rgb) //0,175,156;
         --suspicious-background: #ef697acc;
