fix: separate incoming and outgoing messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -453,10 +453,10 @@ define('msg-in'  + key, val) for key, val in msg-in
         --notification-e2e-text-rgb: 250,217,100;
         --notification-text: #f1f1f266;
         --notification-text-rgb: var(--fg-3-rgb) //241,241,242;
-        --outgoing-background: var(--msg-in-0) //#054740;
-        --outgoing-background-rgb: var(--msg-in-0-rgb) //5,71,64;
-        --outgoing-background-deeper: var(--msg-in-1) //#063b36;
-        --outgoing-background-deeper-rgb: var(--msg-in-1-rgb) //6,59,54;
+        --outgoing-background: var(--msg-out-0) //#054740;
+        --outgoing-background-rgb: var(--msg-out-0-rgb) //5,71,64;
+        --outgoing-background-deeper: var(--msg-out-1) //#063b36;
+        --outgoing-background-deeper-rgb: var(--msg-out-1-rgb) //6,59,54;
         --outgoing-background-highlight: #ccc;
         --outgoing-background-highlight-rgb: 204,204,204;
         --overlay: var(--bg-0) //#080e12;
