feat: added DWA color variables

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -605,58 +605,66 @@ define('msg-in'  + key, val) for key, val in msg-in
         --win32-title-primary-rgb: 255,255,255;
 
         /// DWA color variables.
-        --bg-0         : bg-0 i
-        --bg-0-rgb     : to_rgb(bg-0)
-        --bg-1         : bg-1 i
-        --bg-1-rgb     : to_rgb(bg-1)
-        --bg-2         : bg-2 i
-        --bg-2-rgb     : to_rgb(bg-2)
-        --bg-3         : bg-3 i
-        --bg-3-rgb     : to_rgb(bg-3)
-        --bg-4         : bg-4 i
-        --bg-4-rgb     : to_rgb(bg-4)
-        --bg-5         : bg-5 i
-        --bg-5-rgb     : to_rgb(bg-5)
-        --fg-0         : fg-0 i
-        --fg-0-rgb     : to_rgb(fg-0)
-        --fg-1         : fg-1 i
-        --fg-1-rgb     : to_rgb(fg-1)
-        --fg-2         : fg-2 i
-        --fg-2-rgb     : to_rgb(fg-2)
-        --fg-3         : fg-3 i
-        --fg-3-rgb     : to_rgb(fg-3)
-        --fg-4         : fg-4 i
-        --fg-4-rgb     : to_rgb(fg-4)
-        --fg-5         : fg-5 i
-        --fg-5-rgb     : to_rgb(fg-5)
-        --ac-0         : ac-0 i
-        --ac-0-rgb     : to_rgb(ac-0)
-        --ac-1         : ac-1 i
-        --ac-1-rgb     : to_rgb(ac-1)
-        --ac-2         : ac-2 i
-        --ac-2-rgb     : to_rgb(ac-2)
-        --ac-3         : ac-3 i
-        --ac-3-rgb     : to_rgb(ac-3)
-        --ac-4         : ac-4 i
-        --ac-4-rgb     : to_rgb(ac-4)
-        --ac-5         : ac-5 i
-        --ac-5-rgb     : to_rgb(ac-5)
-        --white        : white;
-        --white-rgb    : to_rgb(white);
-        --red          : red;
-        --red-rgb      : to_rgb(red);
-        --green        : green;
-        --green-rgb    : to_rgb(green);
-        --blue         : blue;
-        --blue-rgb     : to_rgb(blue);
-        --yellow       : yellow;
-        --yellow-rgb   : to_rgb(yellow);
-        --msg-l        : lighten(#2c313a, 5%);
-        --msg-r        : lighten(#252a33, 4%);
-        --t            : transparent;
-        --shadow       : sh;
-        --sh-h         : sh-h;
-        --bshadow      : 0 2px 4px var(--shadow);
+        --bg-0          : bg-0 i
+        --bg-0-rgb      : to_rgb(bg-0)
+        --bg-1          : bg-1 i
+        --bg-1-rgb      : to_rgb(bg-1)
+        --bg-2          : bg-2 i
+        --bg-2-rgb      : to_rgb(bg-2)
+        --bg-3          : bg-3 i
+        --bg-3-rgb      : to_rgb(bg-3)
+        --bg-4          : bg-4 i
+        --bg-4-rgb      : to_rgb(bg-4)
+        --bg-5          : bg-5 i
+        --bg-5-rgb      : to_rgb(bg-5)
+        --fg-0          : fg-0 i
+        --fg-0-rgb      : to_rgb(fg-0)
+        --fg-1          : fg-1 i
+        --fg-1-rgb      : to_rgb(fg-1)
+        --fg-2          : fg-2 i
+        --fg-2-rgb      : to_rgb(fg-2)
+        --fg-3          : fg-3 i
+        --fg-3-rgb      : to_rgb(fg-3)
+        --fg-4          : fg-4 i
+        --fg-4-rgb      : to_rgb(fg-4)
+        --fg-5          : fg-5 i
+        --fg-5-rgb      : to_rgb(fg-5)
+        --ac-0          : ac-0 i
+        --ac-0-rgb      : to_rgb(ac-0)
+        --ac-1          : ac-1 i
+        --ac-1-rgb      : to_rgb(ac-1)
+        --ac-2          : ac-2 i
+        --ac-2-rgb      : to_rgb(ac-2)
+        --ac-3          : ac-3 i
+        --ac-3-rgb      : to_rgb(ac-3)
+        --ac-4          : ac-4 i
+        --ac-4-rgb      : to_rgb(ac-4)
+        --ac-5          : ac-5 i
+        --ac-5-rgb      : to_rgb(ac-5)
+        --msg-in-0      : msg-in-0 i
+        --msg-in-0-rgb  : to_rgb(msg-in-0)
+        --msg-in-1      : msg-in-1 i
+        --msg-in-1-rgb  : to_rgb(msg-in-1)
+        --msg-out-0     : msg-out-0 i
+        --msg-out-0-rgb : to_rgb(msg-out-0)
+        --msg-out-0     : msg-out-1 i
+        --msg-out-0-rgb : to_rgb(msg-out-1)
+        --white         : white;
+        --white-rgb     : to_rgb(white);
+        --red           : red;
+        --red-rgb       : to_rgb(red);
+        --green         : green;
+        --green-rgb     : to_rgb(green);
+        --blue          : blue;
+        --blue-rgb      : to_rgb(blue);
+        --yellow        : yellow;
+        --yellow-rgb    : to_rgb(yellow);
+        --msg-l         : lighten(#2c313a, 5%);
+        --msg-r         : lighten(#252a33, 4%);
+        --t             : transparent;
+        --shadow        : sh;
+        --sh-h          : sh-h;
+        --bshadow       : 0 2px 4px var(--shadow);
 
         /// DWA feature variables.
         --ui-font      : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
