vars: some color adjustments

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -575,8 +575,8 @@ define('msg-in'  + key, val) for key, val in msg-in
         --thumb-border-viewer-active-rgb: var(--fg-3-rgb) //117,120,122;
         --toast-background: var(--bg-3) //#080e12f5;
         --toast-background-rgb: var(--bg-3-rgb) //8,14,18;
-        --tooltip-background: #595959d9;
-        --tooltip-background-rgb: 89.25,89.25,89.25;
+        --tooltip-background: var(--bg-1) //#595959d9;
+        --tooltip-background-rgb: var(--bg-1) //89.25,89.25,89.25;
         --typing: var(--ac-0) //#00af9c;
         --typing-rgb: var(--ac-0-rgb) //0,175,156;
         --unread-background: var(--bg-3) //#1c282f;
@@ -647,8 +647,8 @@ define('msg-in'  + key, val) for key, val in msg-in
         --msg-in-1-rgb  : to_rgb(msg-in-1)
         --msg-out-0     : msg-out-0 i
         --msg-out-0-rgb : to_rgb(msg-out-0)
-        --msg-out-0     : msg-out-1 i
-        --msg-out-0-rgb : to_rgb(msg-out-1)
+        --msg-out-1     : msg-out-1 i
+        --msg-out-1-rgb : to_rgb(msg-out-1)
         --white         : white;
         --white-rgb     : to_rgb(white);
         --red           : red;
