chore: remove lines causing userstyle to be global
Closes #164.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1190,13 +1190,8 @@ define('msg-in'  + key, val) for key, val in msg-in
                 > :nth-child(2) > :nth-child(1) {
                     z-index: 201 i
                     flex: 0 0 30% i
+                    min-width: 350px i
                     [style][tabindex] { border-right: 1px solid bg-5 i }
-                }
-                /// Tweaks for left pane.
-                ._1xXdX:hover { min-width: 349px i }
-                /// App -> Fix left pane border.
-                @media screen and (max-width: app_c_m_w) {
-                    /._1-iDe._1xXdX ._2fpYo { border-right: 1px solid bg-5 i }
                 }
             }
             .three {
